# webpipe

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  blog.wp  build.rs  cleanup-plan.md  compile_flags.txt  comprehensive_test.wp  content-type-parser-plan.md  content-type-test-plan.md  contentful-plan.md  default.env  docker-container-plan.md  e2e-leaks-skip-plan.md  example.wp  fetch-implementation-plan.md  fetch-plan.md  fetch-test-plan.md  import.wp  lexer.c  lsp_diagnostics_test.wp  memory-leaks-fix.md  mocking-plan.md  parser.c  pipeline-update-plan.md  pipeline-var-plan.md  public-folder-plan.md  r-demo.txt  r-middleware-plan.md  result_implementation.md  script_example.wp  scripts-folder-plan.md  server.c  stdin_script.wp  strict-types.wp  test-fetch.wp  (+12 more)
.github/workflows/: ci.yml  docker-build.yml  test.yml
demo/: Dockerfile  README.md  app.wp
docs/: DATALOADERS.md  README.md  concurrency.md  config.md  context.md  database-setup.md  deployment-docker.md  dsl-syntax.md  error-handling.md  flow-control.md  getting-started.md  graphql.md  inline-arguments.md  mocking.md  overview.md  result-routing.md  routes-and-pipelines.md  testing-bdd.md  variables-and-partials.md
docs/middleware/: auth.md  cache.md  debug.md  fetch.md  graphql.md  handlebars.md  join.md  jq.md  log.md  lua.md  pg.md  rate_limit.md  validate.md
include/: webpipe-middleware-api.h
plugins/: jq.c  lua.c  pg.c
public/: app.css
scripts/: querybuilder.lua  renderRichText.lua
src/: cli.rs  cli_args.rs  database_registry.c  database_registry.h  error.rs  lexer.c  lib.rs  loader.rs  main.rs  parser.c  parser.rs  server.c  server.rs  test_runner.rs  testing.c  wp.c  wp.h
src/ast/: fmt.rs  mod.rs  parser.rs  types.rs
src/config/: mod.rs
src/debugger/: dap_server.rs  hook.rs  mod.rs  protocol.rs
src/executor/: context.rs  env.rs  mod.rs  modules.rs  resolver.rs  step.rs  tags.rs  tasks.rs  types.rs
src/graphql/: loader.rs  mod.rs
src/http/: request.rs
src/middleware/: algraf.rs  assert.rs  auth.c  auth.rs  cache.c  cache.rs  debug.c  debug.rs  fetch.c  fetch.rs  gnuplot.c  gramgraph.rs  graphql.rs  handlebars.rs  join.rs  jq.c  jq.rs  js.rs  log.c  log.rs  lua.c  lua.rs  mod.rs  mustache.c  pg.c  pg.rs  plot.c  r.c  rate_limit.rs  stdin.rs  validate.c  validate.rs
src/migrations/: mod.rs
src/plugins/: jq.c  lua.c  pg.c
src/runtime/: context.rs  jq.rs  json_path.rs  mod.rs  pipeline_context.rs
src/scaffold/: mod.rs
src/scaffold/templates/: LLM.md.template  app.wp.template  env.example.template  gitignore.template
test/: test_runner.c
test/fixtures/: post_data.json  test_cookies.wp  test_data.sql  test_routes.wp
test/helpers/: test_utils.c  test_utils.h
test/integration/: test_auth.c  test_cache.c  test_cookies.c  test_fetch.c  test_gnuplot.c  test_jq.c  test_log.c  test_lua.c  test_lua_getenv.c  test_mustache.c  test_mustache_partials.c  test_pg.c  test_pipeline.c  test_plot.c  test_r.c  test_validate.c
test/system/: test_e2e.c  test_perf.c  test_server.c
test/unit/: test_arena.c  test_cookies.c  test_database_registry.c  test_lexer.c  test_middleware.c  test_parser.c  test_plugins.c  test_static.c  test_testing.c
tests/: e2e.rs  e2e_app.wp  e2e_gg_context.wp  integration_db.rs  integration_executor.rs  integration_server.rs  loader_test.rs  loader_test.wp
wp_debug.dSYM/Contents/: Info.plist
wp_debug.dSYM/Contents/Resources/DWARF/: wp_debug
wp_debug.dSYM/Contents/Resources/Relocations/aarch64/: wp_debug.yml
wp_runtime_debug.dSYM/Contents/: Info.plist
wp_runtime_debug.dSYM/Contents/Resources/DWARF/: wp_runtime_debug
wp_runtime_debug.dSYM/Contents/Resources/Relocations/aarch64/: wp_runtime_debug.yml
