[package]
name = "webpipe"
version = "2.0.0"
edition = "2021"

[dependencies]
nom = "8.0.0"
nom_locate = "5.0"
axum = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1"
async-recursion = "1.1"
jaq-core = "2.2"
jaq-std = "2.1"
jaq-json = { version = "1.1", features = ["serde_json"] }
lru = "0.12"
once_cell = "1.19"
handlebars = "6.2"
mlua = { version = "0.9", features = ["lua54", "vendored"] }
boa_engine = "0.19"
matchit = "0.7"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-native-tls", "postgres", "chrono", "json"] }
percent-encoding = "2.3"
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "stream"] }
rand = "0.8"
argon2 = "0.5"
hex = "0.4"
chrono = { version = "0.4", features = ["clock"] }
regex = "1.10"
scraper = "0.19"
notify = { version = "6.1", default-features = false, features = ["macos_fsevent"] }
dotenvy = "0.15"
parking_lot = "0.12"
async-graphql = { version = "7.0", features = ["dynamic-schema", "dataloader", "chrono"] }
async-graphql-parser = "7.0"
async-graphql-value = "7.0"
dashmap = "6.1"

[features]
pg_tests = []
debugger = []
